// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dashboardSidebar > renders with class correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0-0-0" data-collapsed="false" data-dragging="false" class="border-none" style="--width: 15%;">
    <!--v-if-->
    <div class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with collapsedSize correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0-0-0" data-collapsed="true" data-dragging="false" style="--width: 10%;">
    <!--v-if-->
    <div class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with collapsible correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0-0-0" data-collapsed="false" data-dragging="false" style="--width: 15%;">
    <!--v-if-->
    <div class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with content slot correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0-0-0" data-collapsed="false" data-dragging="false" style="--width: 15%;">
    <!--v-if-->
    <div class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with default slot correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0-0-0" data-collapsed="false" data-dragging="false" style="--width: 15%;">
    <!--v-if-->
    <div class="">Default slot</div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with defaultSize correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0-0-0" data-collapsed="false" data-dragging="false" style="--width: 50%;">
    <!--v-if-->
    <div class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with footer slot correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0-0-0" data-collapsed="false" data-dragging="false" style="--width: 15%;">
    <!--v-if-->
    <div class=""></div>
    <div class="">Footer slot</div>
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with header slot correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0-0-0" data-collapsed="false" data-dragging="false" style="--width: 15%;">
    <div class="">Header slot</div>
    <div class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with id correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-test" data-collapsed="false" data-dragging="false" style="--width: 15%;">
    <!--v-if-->
    <div class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with maxSize correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0-0-0" data-collapsed="false" data-dragging="false" style="--width: 15%;">
    <!--v-if-->
    <div class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with minSize correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0-0-0" data-collapsed="false" data-dragging="false" style="--width: 15%;">
    <!--v-if-->
    <div class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with mode drawer correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0-0-0" data-collapsed="false" data-dragging="false" style="--width: 15%;">
    <!--v-if-->
    <div class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <div data-state="open" style="pointer-events: auto;" data-akar-overlay="" data-akar-snap-points="false" data-akar-snap-points-overlay="true" class="" data-pohon="drawer-overlay"></div>
  <div data-dismissable-layer="" style="pointer-events: auto; --akar-snap-point-height: 0;" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-2" aria-labelledby="akar-dialog-title-v-0-0-1" data-state="open" data-akar-drawer="" data-akar-drawer-direction="bottom" data-akar-delayed-snap-points="false" data-akar-snap-points="false" data-pohon="drawer-content" tabindex="-1">
    <div data-akar-drawer-visible="true" data-akar-handle="" aria-hidden="true" class="" data-pohon="drawer-handle"><span data-akar-handle-hitarea="" aria-hidden="true"></span></div><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0-0-1">dashboardSidebar.title</h2><p id="akar-dialog-description-v-0-0-2">dashboardSidebar.description</p></span>
    <!--v-if-->
    <div class=""></div>
    <!--v-if-->
  </div>
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with mode modal correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0-0-0" data-collapsed="false" data-dragging="false" style="--width: 15%;">
    <!--v-if-->
    <div class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--[object Object]-->
</div>"
`;

exports[`dashboardSidebar > renders with mode slideover correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0-0-0" data-collapsed="false" data-dragging="false" style="--width: 15%;">
    <!--v-if-->
    <div class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <div data-state="open" style="pointer-events: auto;" class="" data-pohon="slideover-overlay"></div>
  <div data-dismissable-layer="" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-2" aria-labelledby="akar-dialog-title-v-0-0-1" data-state="open" data-side="left" data-pohon="slideover-content" tabindex="-1" style="pointer-events: auto;"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0-0-1">dashboardSidebar.title</h2><p id="akar-dialog-description-v-0-0-2">dashboardSidebar.description</p></span>
    <div class=""><button type="button" aria-label="Close sidebar" class="" data-pohon="button-base"><span class="iconify i-lucide:x" aria-hidden="true" data-pohon="button-leading-icon"></span>
        <!--v-if-->
        <!--v-if-->
      </button>
      <!--v-if-->
    </div>
    <div class=""></div>
    <!--v-if-->
  </div>
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with resizable correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0-0-0" data-collapsed="false" data-dragging="false" style="--width: 15%;">
    <!--v-if-->
    <div class=""></div>
    <!--v-if-->
  </div>
  <div role="separator" class="" aria-controls="dashboard-sidebar-v-0-0-0"></div>
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with resize-handle slot correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0-0-0" data-collapsed="false" data-dragging="false" style="--width: 15%;">
    <!--v-if-->
    <div class=""></div>
    <!--v-if-->
  </div>Resize handle slot
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with side right correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0-0-0" data-collapsed="false" data-dragging="false" style="--width: 15%;">
    <!--v-if-->
    <div class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with toggle correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0-0-0" data-collapsed="false" data-dragging="false" style="--width: 15%;">
    <!--v-if-->
    <div class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!---->
  <!---->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with toggle slot correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0-0-0" data-collapsed="false" data-dragging="false" style="--width: 15%;">
    <!--v-if-->
    <div class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with toggleSide correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0-0-0" data-collapsed="false" data-dragging="false" style="--width: 15%;">
    <!--v-if-->
    <div class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <div data-state="open" style="pointer-events: auto;" class="" data-pohon="slideover-overlay"></div>
  <div data-dismissable-layer="" style="pointer-events: auto;" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-2" aria-labelledby="akar-dialog-title-v-0-0-1" data-state="open" data-side="left" data-pohon="slideover-content" tabindex="-1"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0-0-1">dashboardSidebar.title</h2><p id="akar-dialog-description-v-0-0-2">dashboardSidebar.description</p></span>
    <div class="">
      <!--v-if--><button type="button" aria-label="Close sidebar" class="" data-pohon="button-base"><span class="iconify i-lucide:x" aria-hidden="true" data-pohon="button-leading-icon"></span>
        <!--v-if-->
        <!--v-if-->
      </button>
    </div>
    <div class=""></div>
    <!--v-if-->
  </div>
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders with ui correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0-0-0" data-collapsed="false" data-dragging="false" style="--width: 15%;">
    <!--v-if-->
    <div class="py-4"></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`dashboardSidebar > renders without toggle correctly 1`] = `
"<div class="">
  <!---->
  <!---->
  <!--v-if-->
  <div id="dashboard-sidebar-v-0-0-0" data-collapsed="false" data-dragging="false" style="--width: 15%;">
    <!--v-if-->
    <div class=""></div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!---->
  <!---->
  <!--teleport end-->
</div>"
`;
